# doll

./: .gitignore  AGENTS.md  DOLL_FINAL_SPEC.md  README.md  SECURITY.md  imp047-finalizer-diagnostic.txt  imp047-pytest-diagnostic.txt  imp049-lint-diagnostic.txt  pyproject.toml  pytest-output.txt
.github/: imp019_apply.py.b64  imp020-mypy.txt  imp020-pytest.txt  imp020-ruff.txt  imp020_apply.py  imp020_update_roadmap.py  imp021-payload.part1  imp021-payload.part2  imp021_apply.py  imp054-fixer-diagnostic.json
scripts/: accept_imp_062_primary_evidence.py  accept_imp_064_primary_writing_evidence.py  apply_imp054_package_support.py  apply_imp_057_evidence_status_patch.py  apply_imp_057_state_package_compat.py  apply_imp_057_state_package_patch.py  apply_imp_057_test_format_patch.py  apply_imp_065_checker.py  apply_imp_065_roadmap.py  apply_imp_066_decision_context.py  apply_imp_066_status.py  apply_imp_067_local_writing_part1.py  apply_imp_067_local_writing_part2.py  apply_imp_067_local_writing_part3.py  apply_imp_067_status.py  apply_imp_067_tests_part1.py  apply_imp_067_tests_part2.py  apply_imp_067_tests_part3.py  apply_imp_068_status.py  apply_phase6_status_after_imp057.py  apply_web_008.py  apply_web_008_index.py  build_final_spec.py  check-implementation-numbering-event.mjs  check-public-site-status.mjs  check-public-writing.mjs  complete_imp_062_docs.py  complete_imp_063_docs.py  complete_imp_064_docs.py  diagnose_imp_057_probe.py  finalize_imp023.py  finalize_imp045.py  finalize_imp046.py  finalize_imp_057_branch.py  fix_imp_057_typing.py  fix_imp_065_tests.py  fix_imp_066_helper_scope.py  freeze_spec_v0_1.py  imp-038-apply-diagnostics.txt  imp-038-roadmap-status.patch  (+86 more)
tests/: __init__.py  confirmation_support.py  import_publication_support.py  test_api.py  (+178 more)
(+491 files in other folders)
