[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "doll-ai"
version = "0.0.1"
description = "A personal AI continuity system."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "badjoke-lab" }]
keywords = ["ai", "local-ai", "continuity", "offline", "personal-ai"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.115,<1",
  "platformdirs>=4.3,<5",
  "pydantic>=2.10,<3",
  "typer>=0.15,<1",
]

[project.scripts]
doll = "doll.cli:main"

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/doll"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --showlocals --cov=doll --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["doll"]

[tool.coverage.report]
show_missing = true
precision = 2
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "doll.restore_impl"
disable_error_code = ["assignment", "arg-type"]

[tool.uv]
default-groups = ["dev"]
